argocd/aws/203403084713/clusters/cbioportal-prod/apps/cbioagent-beta/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cbioagent-beta-ingress
  namespace: default
  labels:
    app.kubernetes.io/instance: cbioagent-beta
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/proxy-body-size: 512m
    ingress.kubernetes.io/proxy-connect-timeout: "300"
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
spec:
  tls:
    - hosts:
        - beta.chat.cbioportal.org
      secretName: beta-chat-cbioportal
  rules:
    - host: beta.chat.cbioportal.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cbioagent-librechat-beta
                port:
                  number: 3080
